Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-7641

Server crash on set global server_audit_incl_users=null

    XMLWordPrintable

Details

    Description

      Maybe a dupe of MDEV-4770, but that one was closed long ago.

      MariaDB-server-10.0.16-1.el6.x86_64

      MariaDB [(none)]> install soname 'server_audit';
      Query OK, 0 rows affected (0.00 sec)
       
      MariaDB [(none)]> set global server_audit_incl_users=null;
      ERROR 2013 (HY000): Lost connection to MySQL server during query

      stack_bottom = 0x7fdca2371d30 thread_stack 0x48000
      /usr/sbin/mysqld(my_print_stacktrace+0x2b)[0xb73d0b]
      /usr/sbin/mysqld(handle_fatal_signal+0x398)[0x7264e8]
      /lib64/libpthread.so.0(+0xf710)[0x7fdca1fec710]
      /lib64/libc.so.6(+0x134adc)[0x7fdca074aadc]
      /usr/lib64/mysql/plugin/server_audit.so(+0x4f47)[0x7fdbeb3f6f47]
      /usr/sbin/mysqld(_ZN17sys_var_pluginvar13global_updateEP3THDP7set_var+0x64)[0x5dd5e4]
      /usr/sbin/mysqld[0x55de3c]
      /usr/sbin/mysqld(_ZN7set_var6updateEP3THD+0x34)[0x55e614]
      /usr/sbin/mysqld(_Z17sql_set_variablesP3THDP4ListI12set_var_baseE+0x89)[0x55f8d9]
      /usr/sbin/mysqld(_Z21mysql_execute_commandP3THD+0x1f3c)[0x5d3e1c]
      /usr/sbin/mysqld[0x5d86a2]
      /usr/sbin/mysqld(_Z16dispatch_command19enum_server_commandP3THDPcj+0x1bc0)[0x5da900]
      /usr/sbin/mysqld(_Z24do_handle_one_connectionP3THD+0x453)[0x695f53]
      /usr/sbin/mysqld(handle_one_connection+0x42)[0x696022]
      /lib64/libpthread.so.0(+0x79d1)[0x7fdca1fe49d1]
      /lib64/libc.so.6(clone+0x6d)[0x7fdca06fe8fd]

      Attachments

        Activity

          People

            holyfoot Alexey Botchkov
            kolbe Kolbe Kegel (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.5d
                0.5d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.