MDEV-7641 Server crash on set global server_audit_incl_users=null.

plugin_variable_update() can get NULL as a value for a string parameter.
Needs to be checked and handled properly.